CCD-7242 test excel files now in resources